--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
