--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.6.2",
     "@mui/styled-engine-sc": "^5.6.1",
     "@mui/x-data-grid": "^5.9.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
