--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.8.1",
     "notistack": "^2.0.5",
     "react": "^18.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
